@@ -1,6 +1,7 @@
 0.8.0 (unreleased)
 ------------------
  - Add ability to override the soap endpoint via `Client.set_address()`
+ - Fix parsing ComplexTypes which have no child elements (#50)
 
 
 0.7.1 (2016-06-01)
